--- a/index.html
+++ b/index.html
@@ -160,27 +160,27 @@ $('.toast').toast();
             <div class="row gy-1">
                 <div class="col-xl-6">
                     <div class="progress mb-2">
-                        <div class="progress-bar progress-bar-striped bg-primary " role="progressbar" style="width: 12%"
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary " role="progressbar" style="width: 12%"
                             aria-valuenow="12" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="progress mb-2">
-                        <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar"
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
                             style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="progress mb-3">
-                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 38%"
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 38%"
                             aria-valuenow="28" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="progress mb-2">
-                        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 62%"
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 62%"
                             aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="progress mb-2">
-                        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 75%"
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 75%"
                             aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 90%"
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" role="progressbar" style="width: 90%"
                             aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
@@ -223,7 +223,7 @@ $('.toast').toast();
                             </div>
                         </div>
                         <div class="card">
-                            <div class="card-header" role="tab" id="headingTwo">
+                            <div class="card-header" role="tab" id="headingThree">
                                 <h5 class="mb-0">
                                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
                                         href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
