--- a/index.html
+++ b/index.html
@@ -160,28 +160,33 @@ $('.toast').toast();
             <div class="row gy-1">
                 <div class="col-xl-6">
                     <div class="progress mb-2">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary " role="progressbar" style="width: 12%"
-                            aria-valuenow="12" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary "
+                            role="progressbar" style="width: 12%" aria-valuenow="12" aria-valuemin="0"
+                            aria-valuemax="100"></div>
                     </div>
                     <div class="progress mb-2">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
-                            style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary"
+                            role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                            aria-valuemax="100"></div>
                     </div>
                     <div class="progress mb-3">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 38%"
-                            aria-valuenow="28" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar" style="width: 38%" aria-valuenow="28" aria-valuemin="0"
+                            aria-valuemax="100"></div>
                     </div>
                     <div class="progress mb-2">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 62%"
-                            aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning"
+                            role="progressbar" style="width: 62%" aria-valuenow="62" aria-valuemin="0"
+                            aria-valuemax="100"></div>
                     </div>
                     <div class="progress mb-2">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 75%"
-                            aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger"
+                            role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100"></div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" role="progressbar" style="width: 90%"
-                            aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" role="progressbar"
+                            style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                 </div>
@@ -333,8 +338,8 @@ $(function(){
             <nav id="navbar-example2" class="navbar navbar-light bg-light">
                 <h3 class="navbar-brand">Project Name</h3>
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a class="nav-link active" href="#verse1">Verse 1</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#verse2">Verse 2</a></li>
+                    <li class="nav-item"><a class="nav-link " href="#verse1">Verse 1</a></li>
+                    <li class="nav-item"><a class="nav-link " href="#verse2">Verse 2</a></li>
                 </ul>
             </nav>
             <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="scrollspy-example">
@@ -411,7 +416,7 @@ $(function(){
 
 
 
-    <div class="footer bg-info text-white text-center pt-3" >
+    <div class="footer bg-info text-white text-center pt-3">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -443,10 +448,10 @@ $(function(){
     </script>
     <script>
         $(function () {
-          $('[data-toggle="tooltip"]').tooltip();
+            $('[data-toggle="tooltip"]').tooltip();
         });
         $('.toast').toast();
-      </script>
+    </script>
 
 </body>
 
